kratos-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
  namespace: kratos-staging
  labels:
    app: kratos
spec:
  selector:
    matchLabels:
      app: kratos
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: kratos
    spec:
      containers:
      - name: kratos
        image: oryd/kratos:v0.10.1
        command: ["kratos", "-c", "/etc/config/kratos/kratos.yml", "serve"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4433
          protocol: TCP
        - containerPort: 4434
          protocol: TCP
        volumeMounts:
          - name: kratos-identity-schema
            mountPath: /etc/config/kratos/identity.schema.json
            subPath: identity.schema.json
          - name: kratos-config
            mountPath: /etc/config/kratos/kratos.yml
            subPath: kratos.yml
      volumes:
        - name: kratos-identity-schema
          configMap:
            name: identity-schema-config
            defaultMode: 420
        - name: kratos-config
          configMap:
            name: kratos-config
            defaultMode: 420
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
